@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 42b594e637b21f94d82b1288bb2221a0
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
