@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 93e93de8f3c3e8148909d9a8d56d4071
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
