@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 4e3d18aaecae68a41ab5dfc9d85a6785
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
