@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: 7f4dd57b42c52514581c6e9d10e77165
+AssemblyDefinitionReferenceImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
