@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: f31c50c2f10fda845963e9f589a3c887
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
