@@ -18,6 +18,11 @@
             "displayName": "Cinemachine Example Scenes",
             "description": "Sample scenes illustrating various ways to use Cinemachine",
             "path": "Samples~/Cinemachine Example Scenes"
+        },
+        {
+            "displayName": "Scrub Bubble support for Nested Timelines (experimental)",
+            "description": "Experimental feature.  Adds a Timeline extension to support Scrubb Bubble for nested timelines.  This extension will become obsolete when Timeline adds native support for the missing API",
+            "path": "Samples~/Nested Timeline Scrub Bubble"
         }
     ]
 }
